<resources>
    <string name="app_name">WorkoutTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">FitIn</string>
    <string name="sUserName">Enter Name</string>
    <string name="sBLogin">login</string>
    <string name="sPasswod">Password</string>
    <string name="title_activity_client_profile">ClientProfile</string>
    <string name="title_activity_client_stats">ClientStatsActivity</string>
    <string name="new_user_button">нов съм</string>
    <string name="existing_user_button">синхронизация</string>
    <string name="title_activity_create_owner">CreateOwnerActivity</string>
    <string name="i_am_trainer">Аз съм треньор</string>
    <string name="first_name">Име</string>
    <string name="last_name">Фамилия</string>
    <string name="more_information">Попълни повече сега</string>
    <string name="information_label">Информация за мен</string>
    <string name="save">Запази</string>
    <string name="birth_date">Дата на раждане</string>
    <string name="height">Височина</string>
    <string name="weight">Тегло</string>
    <string name="phone">Телефон</string>
    <string name="email">Имейл</string>
    <string name="tvLabelAddIcon">Add Client</string>
    <string name="tvLabelClientsIcon">Clients</string>
    <string name="tvLabelCalendarIcon">Schedule</string>
    <string name="tvLabelWODIcon">WOD</string>
    <string name="tvLabelProgramIcon">Ready Programs</string>
    <string name="tvLabelInfoIcon">Info</string>
    <string name="tvCalendarmenu">CALENDAR</string>
    <string name="tvClientProfile">PROFILE</string>
    <string name="tvClients">Клиенти</string>
    <string name="backup_in_progress">Backup in progress...</string>
    <string name="restore_in_progress">Restore in progress...</string>
    <string name="information">Information</string>
    <string name="network_off_message">Please switch on mobile data or Wi-Fi!</string>
    <string name="restore_completed">Restore completed successfully!</string>
    <string name="backup_completed">"Backup completed successfully!"</string>
    <string name="sync_error">Error while syncing!</string>
</resources>
