<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="blueberryco.workouttracker.CreateOwnerActivity">

    <TextView
        android:id="@+id/tvInformation"
        android:text="@string/information_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/cbxTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInformation"
        android:layout_centerHorizontal="true"
        android:text="@string/i_am_trainer"
        android:layout_marginTop="10dp"/>
    
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/first_name"
        android:layout_below="@+id/cbxTrainer"
        android:ems="10"
        android:focusable="true"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"
        android:layout_below="@+id/etFirstName"
        android:ems="10"
        android:focusable="true"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"/>

    <CheckBox
        android:id="@+id/cbxMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etLastName"
        android:text="@string/more_information"/>

    <LinearLayout
        android:id="@+id/pnlMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/cbxMoreInfo"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:ems="10"
            android:inputType="date"
            android:focusable="true"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:ems="10"
            android:inputType="numberDecimal"
            android:focusable="true"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"/>

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:ems="10"
            android:inputType="numberDecimal"
            android:focusable="true"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:ems="10"
            android:inputType="phone"
            android:focusable="true"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:focusable="true"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateOwner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pnlMoreInfo"
        android:background="#000000"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:text="@string/save"/>

</RelativeLayout>
